@@ -11,6 +11,7 @@ Version 0.15.0
   added re-assert FCU_compatibility to NodesView & NodeBackupDialog
   check if parameters loaded rather than disable buttons
   Added SwitchTeach1 (for CANACE3/CANACE3C)
+  Block teach node if useEventIndex
 
 Version 0.14.0
   Added 'show events only' to BusTraffic side bar
